--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
   carousel_slider: ^4.2.1
+  custom_top_navigator: ^0.0.4
   
 
 dev_dependencies:
